--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="pais">País</string>
     <string name="registrar">Registrar</string>
     <string name="ir_a_registro">¿No tienes cuenta? Regístrate</string>
+    <string name="logo_desc">Logo de MusAPI</string>
+    <string name="registrar_titulo">Registrar</string>
+    <string name="cancelar">Cancelar</string>
 </resources>
