Implementacion Subir Cancion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,8 @@
     <string name="usuario_label">Usuario</string>
     <string name="desc_evaluar_artista">Evaluar artista</string>
     <string name="desc_crear_album">Crear álbum</string>
+    <string name="desc_subir_contenido">Subir contenido</string>
+
     <!-- editar perfil -->
     <string name="editar_perfil_titulo">Editar perfil</string>
     <string name="subir_foto">Subir foto</string>
